# love-ludhiana-fashion

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  readwhathaveudone.md
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  health.py
backend/app/common/: __init__.py  enums.py
backend/app/config/: __init__.py  cloudinary.py  constants.py  razorpay.py  redis.py  settings.py  shiprocket.py
backend/app/core/: __init__.py  dependencies.py  events.py  security.py
backend/app/database/: __init__.py  base.py  mixins.py  session.py
backend/app/exceptions/: __init__.py  base.py  handlers.py
backend/app/logging/: __init__.py  config.py
backend/app/middleware/: __init__.py  cors.py  rate_limiter.py  request_logging.py  security_headers.py
backend/app/models/: __init__.py  base.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: __init__.py
backend/app/modules/analytics/: __init__.py
backend/app/modules/auth/: __init__.py
backend/app/modules/banners/: __init__.py
backend/app/modules/brands/: __init__.py
backend/app/modules/cart/: __init__.py
backend/app/modules/categories/: __init__.py
backend/app/modules/contact/: __init__.py
backend/app/modules/coupons/: __init__.py
backend/app/modules/dashboard/: __init__.py
backend/app/modules/faq/: __init__.py
backend/app/modules/inventory/: __init__.py
backend/app/modules/notifications/: __init__.py
backend/app/modules/orders/: __init__.py
backend/app/modules/payments/: __init__.py
backend/app/modules/products/: __init__.py
backend/app/modules/reviews/: __init__.py
backend/app/modules/settings/: __init__.py
backend/app/modules/shipping/: __init__.py
backend/app/modules/users/: __init__.py
backend/app/modules/wishlist/: __init__.py
backend/app/repositories/: __init__.py  base.py
backend/app/schemas/: __init__.py  base.py  common.py
backend/app/services/: __init__.py  base.py
backend/app/utils/: __init__.py  helpers.py  validators.py
backend/migrations/: env.py
backend/tests/: __init__.py  conftest.py  test_health.py
database/: README.md
database/seeds/: .gitkeep
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docs/: AI_DEVELOPER_GUIDE.md  api-standards.md  architecture.md  coding-standards.md  development-guide.md  folder-structure.md
frontend/: .env.example  .prettierrc  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/animations/: index.ts
frontend/src/components/layout/: index.ts
frontend/src/components/shared/: index.ts
frontend/src/components/ui/: index.ts
frontend/src/config/: api.ts  constants.ts  env.ts
frontend/src/contexts/: index.ts
frontend/src/hooks/: useMediaQuery.ts
frontend/src/layouts/: RootLayout.tsx
frontend/src/pages/: Home.tsx  NotFound.tsx
frontend/src/providers/: AppProviders.tsx
frontend/src/redux/: hooks.ts  store.ts
frontend/src/redux/slices/: uiSlice.ts
frontend/src/routes/: index.tsx
frontend/src/services/: index.ts
frontend/src/types/: api.ts  index.ts
frontend/src/utils/: cn.ts  format.ts
scripts/: setup.ps1  setup.sh
